# carvllm-trace

./: .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-config.yml  CONTRIBUTING.md  LICENSE.md  README.md  justfile  mkdocs.yml  pyproject.toml  tox.ini
examples/: __init__.py  run_imagenet_vithuge.sh
resources/: sample.csv
src/carvllm_trace/: __init__.py  __main__.py  cli.py  utils.py
src/trace_generator/: Readme.md  gpu_activity_exporter.py  imagenet_vit_huge_FSDP_nccl.py
tests/: __init__.py  conftest.py  test_utils.py
